--- a/helloworld/package.json
+++ b/helloworld/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-flip-move": "^3.0.4",
     "react-router-dom": "^5.1.0",
     "react-scripts": "3.1.1",
     "redux": "^4.0.4"
