--- a/helloworld/package.json
+++ b/helloworld/package.json
@@ -11,7 +11,8 @@
     "react-flip-move": "^3.0.4",
     "react-router-dom": "^5.1.0",
     "react-scripts": "3.1.1",
-    "redux": "^4.0.4"
+    "redux": "^4.0.4",
+    "uuid": "^3.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
